subheader titles should no longer wrap and extend subheader

--- a/src/components/directives/subheader.less
+++ b/src/components/directives/subheader.less
@@ -21,6 +21,8 @@
     line-height: 46px;
     color: white;
     font-weight: 300;
+    overflow: hidden;
+    height: @subheaderHeight;
   }
 
   .search-sub-input {
